@@ -1,6 +1,15 @@
-execute_process(COMMAND mkdir -p ${CMAKE_BINARY_DIR}/contrib/libhubbub/src/treebuilder)
-execute_process(COMMAND ${GPERF} ${CMAKE_SOURCE_DIR}/contrib/libhubbub/src/treebuilder/element-type.gperf --output-file=${CMAKE_BINARY_DIR}/contrib/libhubbub/src/treebuilder/autogenerated-element-type.c)
-execute_process(COMMAND sed -e "s/^\\(const struct element_type_map\\)/static \\1/" -i ${CMAKE_BINARY_DIR}/contrib/libhubbub/src/treebuilder/autogenerated-element-type.c)
+execute_process(COMMAND mkdir -p ${CMAKE_BINARY_DIR}/contrib/libhubbub/src/treebuilder RESULT_VARIABLE RET)
+if(NOT RET EQUAL 0)
+	message(FATAL_ERROR "Unable to create directory: ${CMAKE_BINARY_DIR}/contrib/libhubbub/src/treebuilder (error ${RET})")
+endif()
+execute_process(COMMAND ${GPERF} ${CMAKE_SOURCE_DIR}/contrib/libhubbub/src/treebuilder/element-type.gperf --output-file=${CMAKE_BINARY_DIR}/contrib/libhubbub/src/treebuilder/autogenerated-element-type.c RESULT_VARIABLE RET)
+if(NOT RET EQUAL 0)
+	message(FATAL_ERROR "gperf for libhubbub failed (error ${RET})")
+endif()
+execute_process(COMMAND sed -e "s/^\\(const struct element_type_map\\)/static \\1/" -i ${CMAKE_BINARY_DIR}/contrib/libhubbub/src/treebuilder/autogenerated-element-type.c RESULT_VARIABLE RET)
+if(NOT RET EQUAL 0)
+	message(FATAL_ERROR "sed for libhubbub failed (error ${RET})")
+endif()
 
 add_library(hubbub SHARED
 	src/parser.c
