@@ -4,18 +4,30 @@ project(nsgenbind)
 add_definitions(-D_POSIX_C_SOURCE=200809L)
 add_compile_options(-std=c99 -Wno-void-pointer-to-int-cast -Wno-int-conversion)
 
-execute_process(COMMAND flex -P=nsgenbind_ --outfile=${CMAKE_BINARY_DIR}/nsgenbind-lexer.c --header-file=${CMAKE_BINARY_DIR}/nsgenbind-lexer.h ${CMAKE_SOURCE_DIR}/src/nsgenbind-lexer.l)
+execute_process(COMMAND flex -P=nsgenbind_ --outfile=${CMAKE_BINARY_DIR}/nsgenbind-lexer.c --header-file=${CMAKE_BINARY_DIR}/nsgenbind-lexer.h ${CMAKE_SOURCE_DIR}/src/nsgenbind-lexer.l RESULT_VARIABLE RET)
+if(NOT RET EQUAL 0)
+	message(FATAL_ERROR "flex nsgenbind failed (error ${RET})")
+endif()
 if(${YACC} STREQUAL bison)
-	execute_process(COMMAND bison --output=${CMAKE_BINARY_DIR}/nsgenbind-parser.c --header=${CMAKE_BINARY_DIR}/nsgenbind-parser.h ${CMAKE_SOURCE_DIR}/src/nsgenbind-parser.y -p nsgenbind_)
+	execute_process(COMMAND bison --output=${CMAKE_BINARY_DIR}/nsgenbind-parser.c --header=${CMAKE_BINARY_DIR}/nsgenbind-parser.h ${CMAKE_SOURCE_DIR}/src/nsgenbind-parser.y -p nsgenbind_ RESULT_VARIABLE RET)
 else()
-	execute_process(COMMAND byacc --output=${CMAKE_BINARY_DIR}/nsgenbind-parser.c -d -p nsgenbind_ ${CMAKE_SOURCE_DIR}/src/nsgenbind-parser.y)
+	execute_process(COMMAND byacc --output=${CMAKE_BINARY_DIR}/nsgenbind-parser.c -d -p nsgenbind_ ${CMAKE_SOURCE_DIR}/src/nsgenbind-parser.y RESULT_VARIABLE RET)
+endif()
+if(NOT RET EQUAL 0)
+	message(FATAL_ERROR "yacc nsgenbind failed (error ${RET})")
 endif()
 
-execute_process(COMMAND flex -P=webidl_ --outfile=${CMAKE_BINARY_DIR}/webidl-lexer.c --header-file=${CMAKE_BINARY_DIR}/webidl-lexer.h ${CMAKE_SOURCE_DIR}/src/webidl-lexer.l)
+execute_process(COMMAND flex -P=webidl_ --outfile=${CMAKE_BINARY_DIR}/webidl-lexer.c --header-file=${CMAKE_BINARY_DIR}/webidl-lexer.h ${CMAKE_SOURCE_DIR}/src/webidl-lexer.l RESULT_VARIABLE RET)
+if(NOT RET EQUAL 0)
+	message(FATAL_ERROR "flex webidl failed (error ${RET})")
+endif()
 if(${YACC} STREQUAL bison)
-	execute_process(COMMAND bison --output=${CMAKE_BINARY_DIR}/webidl-parser.c --header=${CMAKE_BINARY_DIR}/webidl-parser.h ${CMAKE_SOURCE_DIR}/src/webidl-parser.y -p webidl_)
+	execute_process(COMMAND bison --output=${CMAKE_BINARY_DIR}/webidl-parser.c --header=${CMAKE_BINARY_DIR}/webidl-parser.h ${CMAKE_SOURCE_DIR}/src/webidl-parser.y -p webidl_ RESULT_VARIABLE RET)
 else()
-	execute_process(COMMAND byacc --output=${CMAKE_BINARY_DIR}/webidl-parser.c -d -p webidl_ ${CMAKE_SOURCE_DIR}/src/webidl-parser.y)
+	execute_process(COMMAND byacc --output=${CMAKE_BINARY_DIR}/webidl-parser.c -d -p webidl_ ${CMAKE_SOURCE_DIR}/src/webidl-parser.y RESULT_VARIABLE RET)
+endif()
+if(NOT RET EQUAL 0)
+	message(FATAL_ERROR "yacc webidl failed (error ${RET})")
 endif()
 
 add_executable(nsgenbind
